Bug 441148 - Always full GPU usage display in System Monitor Sensor widget
Summary: Always full GPU usage display in System Monitor Sensor widget
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.22.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-19 00:04 UTC by Jacob Zhong
Modified: 2021-08-30 08:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the widget (12.44 KB, image/png)
2021-08-19 00:04 UTC, Jacob Zhong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacob Zhong 2021-08-19 00:04:56 UTC
Created attachment 140826 [details]
Screenshot of the widget

SUMMARY
The "All GPU Usage" bar in the "System Monitor Sensor" widget always displays full usage even the number is correct.

OBSERVED RESULT
See attached image.

EXPECTED RESULT
The bar should be consistent with the usage number.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.22
(available in About System)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
I'm not sure whether it's related to my computer specifically. I just updated my CPU to Ryzen 5700G.
Comment 1 Bug Janitor Service 2021-08-30 08:24:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksystemstats/-/merge_requests/16
Comment 2 David Redondo 2021-08-30 08:45:27 UTC
Git commit c40c40c2c8abd2e307ca01cd4a05a3a249b476b8 by David Redondo.
Committed on 30/08/2021 at 08:25.
Pushed by ahiemstra into branch 'master'.

Add maximum for total GPU usage

M  +1    -0    plugins/gpu/AllGpus.cpp

https://invent.kde.org/plasma/ksystemstats/commit/c40c40c2c8abd2e307ca01cd4a05a3a249b476b8