Add maximum for total GPU usage

BUG:441148